Feature/add country caching (#9)
* Add entity Country, do Many to Many
-add Entity Country, with many to many
-add to car many to many
-add method to repo
-add and do logic of method in Service
-add endpoint to Controller and did method
-add all test for all methods
-update cars.yml with country
-add tables to db and connect country with cars

* Add cache to countries
-create CountryRepository and CountryService
-create and do methods in CountryServiceImpl, add postConstruct method, save countries in ConcurrentHashMap
-change CarServiceImpl
-save correct java-ci.yml on this branch

* Resolve conflicts with master

* Add tests for updateCar

* Change test, fixed problems

* Add tests for CountryService

* Add schedule for country cache
-add annotation to GoGoApplication EnableScheduling
-add method to CountryServiceImpl, refreshCache every dat at 00:00, add LowerCase to country
-refresh tests, add test to RefreshCache

* Integrate countries into CarResponseDto
-add Countries list to Dto
-change method in CarController
-add default method into Mapper
-add annotation transactional to CarServiceImpl